# among-us

./: .gitignore  CMakeLists.txt  Makefile  README.md  glad.c
assets/textures/: mario.xcf  mario2.xcf  mario_transparent_hit.xcf
gimp/: elite.xcf  exit.xcf  flag.xcf  pelican.xcf  rest.xcf  shield.xcf  stand-1.xcf  stand-2.xcf  stand-3.xcf  stand-4.xcf  stand-5.xcf  stand-6.xcf  sword.xcf
src/: game.cpp  game.h  game_const.h  game_maze.cpp  game_maze.h  game_object.cpp  game_object.h  game_room.cpp  game_room.h  main.cpp  player.cpp  player.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  task.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
